--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jotai": "^2.12.2",
+    "nativewind": "^2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -39,7 +41,6 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "nativewind": "^2.0.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
